--- a/index.css
+++ b/index.css
@@ -25,6 +25,9 @@ li a {
   padding: 14px 16px;
   text-decoration: none;
 }
+.heading {
+  padding: 20px;
+}
 .heading h1 p {
   width: 445px;
   height: 338px;
